--- a/manuscripts/thesis/index.Rmd
+++ b/manuscripts/thesis/index.Rmd
@@ -18,12 +18,12 @@ affiliation:
   - id            : "1"
     institution   : "University of Calgary"
 
-note      : |
+note              : |
   Author's Note: 
 
 abstract          : |
-  The study of network variants, individual-specific deviations in whole brain functional network organization, is an area of growing interest in human neuroscience due to its relevance for understanding *how much* and *in which ways* whole brain functional networks differ between and within individuals. Previous research has used highly sampled functional magnetic resonance imaging (fMRI) data to study network variants, creating a considerable practical barrier due to the cost of this work. The proposed research explores the feasability of using a relatively cheaper neuroimaging modality, electroencephalography (EEG), to study network variants. Paralleling the respective developments in the functional magnetic resonance imaging literature, we first test how much data is needed to observe stable effects within an individual using repeated measures resting state EEG. After establishing the amount of data needed to observe stable effects within an individual, we will examine how whole brain functional networks differ between and within individuals using EEG source space functional connectivity analysis and measures of network similarity. Given the similarities between EEG and fMRI functional connectivity, we expect to find patterns of network variants similar to those found in fMRI studies. The proposed research accomplishes two important goals: First, it addresses several calls in the literature to explore alternative metrics and paradigms that may move us closer to understanding the neural causes of differences in behaviour. Second it lays the empirical groundwork for future neuroscience research seeking to study how whole brain functional networks differ between and within individuals using EEG.
-
+  The study of network variants, individual-specific deviations in whole brain functional network organization, is an area of growing interest in human neuroscience due to its relevance for understanding *how much* and *in which ways* whole brain functional networks differ between and within individuals. Although previous research has mainly relied on highly sampled functional magnetic resonance imaging (fMRI) data to study network variants, electroencephalography (EEG) has the potential to deliver complimentary insights given that it directly measures the electrophysiological activity of neural populations in the cerebral cortex in real time. Here we explored the feasibility of using EEG to study network variants using repeated measures eyes-closed and eyes-open resting state data from 14 participants taken across three sessions---testing for the presence of network variants by estimating how phase and amplitude coupling functional connectomes differ between and within individuals across different frequency bands using measures of network similarity, contrasting the magnitude of each of these effects across sessions and states at the group-level, and examining their consistency at the individual-level. We found at most weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
+  
 keywords          : |
   Electroencephalography, Functional Connectivity, Network Variants, Individual Differences
 wordcount         : 
